# strawberry-pubsub-example

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
api/: schema.py  some_task.py
