
[project]
authors = [
  {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "strawberry-graphql>=0.185.0",
    "redis>=4.5.5",
    "fastapi>=0.97.0",
    "uvicorn[standard]>=0.22.0",
    "aiohttp>=3.8.4",
    "httpx>=0.24.1",
    "pdbpp>=0.10.3",
]
description = ""
license = {text = "MIT"}
name = ""
requires-python = ">=3.11"
version = ""

[tool.pdm.scripts]
_.env_file = ".env"
cli = "python -m cli"
dev.cmd = "uvicorn main:app --log-level debug --port 8000"
dev.env = {PYTHONASYNCIODEBUG = "1"}
start = "uvicorn main:app --host 0.0.0.0 --port 8080"
